--- a/templates/flowchart_swimlane.j2
+++ b/templates/flowchart_swimlane.j2
@@ -20,7 +20,12 @@ graph TB
 
         {% for comp in node.node_components %}
             {% set styleClass = comp.metadata.style if comp.metadata.style else "" %}
-            {{ comp.id }}["{{ comp.name }}<br/>{{ comp.metadata.participant_name if comp.metadata.participant_name else '' }}"]{% if styleClass %}:::{{ styleClass }}{% endif %}
+            {% if styleClass and ':' in styleClass %}
+                {{ comp.id }}["{{ comp.name }}<br/>{{ comp.metadata.participant_name if comp.metadata.participant_name else '' }}"]
+                style {{ comp.id }} {{ styleClass }}
+            {% else %}
+                {{ comp.id }}["{{ comp.name }}<br/>{{ comp.metadata.participant_name if comp.metadata.participant_name else '' }}"]{% if styleClass %}:::{{ styleClass }}{% endif %}
+            {% endif %}
             
         {% endfor %}
     {% endmacro %}
